Fix modal overflow issue

--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -254,9 +254,7 @@
 .modal-outer-container {
   align-items: center;
   display: flex;
-  height: 100vh;
   justify-content: center;
-  width: 100vw;
 }
 
 .modal-tab {
